src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_clears_ai_readable_history_only__ghostty-vt.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
history-01
history-02
history-03
history-04
history-05
history-06
history-07
history-08
history-09
history-10
history-11
history-12
history-13
history-14
history-15
history-16
history-17
history-18
history-31
history-32
history-33
history-34
history-35
history-36
history-37                                                           
history-38                                                           
history-39                                                           
history-40                                                           
guest-ready                                                          
                                                                     
[0m[38;5;6m[48;5;0m ↓ agent.sh ────────────────────────────────────────────────────────────────────[0m
agent-ready                                                          
before-has-old-history                                               
[0m[38;5;2mafter-history-cleared[0m[0m
