src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_clears_ai_readable_history_only__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
history-01[m
history-02[m
history-03[m
history-04[m
history-05[m
history-06[m
history-07[m
history-08[m
history-09[m
history-10[m
history-11[m
history-12[m
history-13[m
history-14[m
history-15[m
history-16[m
history-17[m
history-18[m
history-31[m
history-32[m
history-33[m
history-34[m
history-35[m
history-36[m
history-37[C                                                          [m
history-38[C                                                          [m
history-39[C                                                          [m
history-40[C                                                          [m
guest-ready                                                          [m
          [C                                                          [m
[36;40m ↓ agent.sh ────────────────────────────────────────────────────────────────────[m
agent-ready                                                          [m
before-has-old-history                                               [m
[32mafter-history-cleared[m                                                [m
          [C                                                          [m
          [C                                                          [m
          [m
          [m
          [m
          [m
           [m
[m
